<resources>
    <string name="app_name">Young detective</string>
    <string name="nazva">Young detective</string>
    <string name="lvl1">1 рівень</string>
    <string name="lvl2">2 рівень</string>
    <string name="lvl3">3 рівень</string>
    <string name="lvl4">4 рівень</string>
    <string name="lvl5">5 рівень</string>
    <string name="contin">Продовжити</string>
    <string name="lvl1_text1">Після закінчення робочого дня поліцейський повертався з роботи додому.</string>
    <string name="lvl1_text2">Йому назустріч йшов підозрілий чоловік, який ніс щось важке в сумках.</string>
    <string name="lvl1_text3">Поліцейський зупинив перехожого і запитав його хто він і що він несе у руках.</string>
    <string name="lvl1_text4">Чоловік показав на будинок поруч з яким вони стояли і сказав що він там живе, а в руках у нього непотрібні речі, які він хоче віддати другу.</string>
    <string name="lvl1_text5">Поліцейський почувши відповідь відразу заарештував чоловіка. Чому він запідозрив, що чоловік бреше?</string>
    <string name="lvl1_rezult">Як ви могли помітити то сліди на снігу, що належать підозрюваному ведуть не до вхідних дверей, а до вікна. Значить чоловік заліз через вікно в будинок і пограбував його.</string>

    <string name="lvl2_text1">Багатого бізнесмена спробували отруїти.</string>
    <string name="lvl2_text2">Зловмисник підсипав отруту в напій перед вечерею.</string>
    <string name="lvl2_text3">На щастя потерпілий вижив, але не знав хто це зробив, тому він викликав поліцейських.</string>
    <string name="lvl2_text4">Під підозру потрапили дружина бізнесмена, його домробітниця і кухар.</string>
    <string name="lvl2_text5">Кожен з них заявив що не мають ніякого відношення до цього злочину.</string>
    <string name="lvl2_text6">Обшукавши будинок поліція знайшла баночку, де була отрута, і рукавичку, на якій були сліди отрути.</string>
    <string name="lvl2_text7">Уважно вивчивши докази, вони зрозуміли хто з підозрюваних є вбивцею. Хто ж це і чому?</string>
    <string name="lvl2_rezult">Людина, яка намагалася отруїти бізнесмена є лівшею так як рукавичка з отрутою одягається на ліву руку. Єдиним підозрюваним лівшею є прибиральниця вона тримає щітку для прибирання в лівій руці, а значить є лівшею.</string>

    <string name="lvl3_text1">В старому будинку на околиці селища жив літній чоловік.</string>
    <string name="lvl3_text2">Одного ранку коли листоноша приніс свіжу газету то йому ніхто не відкрив. Він запідозрив щось неладне і викликав поліцію.</string>
    <string name="lvl3_text3">Коли вони прибули на місце, то виявили, що чоловік був убитий.</string>
    <string name="lvl3_text4">Під підозру потрапили три людини листоноша, прибиральниця і сусід чоловіка.</string>
    <string name="lvl3_text5">Листоноша заявив, що він доставляв чоловікові газети раз у тиждень. Минулого тижня коли він був все було в порядку.</string>
    <string name="lvl3_text6">Прибиральниця розповіла, що вона також приходила прибиратися раз в тиждень і минулого тижня, коли вона була, то не бачила нічого підозрілого.</string>
    <string name="lvl3_text7">Сусід заявив, що він їхав відпочивати за кордон на місяць і повернувся тільки вчора ввечері, тому абсолютно не спілкувався з сусідом вже давно.</string>
    <string name="lvl3_text8">Поліція вислухавши всіх підозрюваних зрозуміла хто збрехав і хто причетний до вбивства. Хто ж це і чому? </string>
    <string name="lvl3_rezult">Поліцейські помітили, що в будинку жертви досить брудно і місцями висить павутина. Це означає, що прибиральниця не була в цьому будинку вже давно, тому вона збрехала і якось причетна до злочину.</string>

    <string name="lvl4_text1">Четверо друзів відпочивали в заміському будинку.</string>
    <string name="lvl4_text2">Несподівано в двері постукали.</string>
    <string name="lvl4_text3">На порозі стояли кілька поліцейських. Вони розповіли, що переслідували перевертня і бачили, як він забіг в цей будинок.</string>
    <string name="lvl4_text4">Кожен з друзів сказав, що вони нікого не бачили.</string>
    <string name="lvl4_text5">Поліцейські оглянули будинок і допитали кожного з присутніх чим вони займалися в останню годину.</string>
    <string name="lvl4_text6">Дмитро сказав, що читав книгу.</string>
    <string name="lvl4_text7">Маша розповіла, що слухала музику.</string>
    <string name="lvl4_text8">Олег сказав, що сидів в інтернеті.</string>
    <string name="lvl4_text9">Олена сказала, що вона дивилася фільм.</string>
    <string name="lvl4_text10">Поліцейські швидко зрозуміли, що перевертень зміг вкусити когось із присутніх і потім зник. Кого ж вкусив перевертень?</string>
    <string name="lvl4_rezult">Тільки у одного з допитаних на руках були подряпини і порваний одяг. Це Олег, а це значить, що його вкусив перевертень і він сам скоро звернеться в чудовисько.</string>

    <string name="lvl5_text1">Напередодні в місті було скоєно злочин.</string>
    <string name="lvl5_text2">Хтось пробрався вночі в будівлю банку і скопіював з комп\'ютера дані декількох тисяч клієнтів.</string>
    <string name="lvl5_text3">Досвідчений детектив знав, що даний злочин могла скоїти тільки одна людина.</string>
    <string name="lvl5_text4">Поліцейські прийшли з ордером на обшук в квартиру Марії.</string>
    <string name="lvl5_text5">Вона відкрила двері і побачивши поліцейських швидко закрила її.</string>
    <string name="lvl5_text6">Через кілька хвилин поліцейські виламали двері і проникли в квартиру.</string>
    <string name="lvl5_text7">Але обшукавши все навколо в тому числі саму підозрювану вони не знайшли флешку з вкраденими даними.</string>
    <string name="lvl5_text8">Однак досвідчений детектив все ж здогадався куди Марія сховала флешку.</string>
    <string name="lvl5_text9">Як детектив здогадався і де флешка?</string>
    <string name="lvl5_rezult">Детектив зауважив, що коли Марія відчинила двері перший раз то її волосся було розпущене. Проте, коли поліцейські виламали двері, волосся на голові підозрюваної було вже забране. Так детектив зрозумів, що Марія сховала флешку у себе в волоссі.</string>

    <string name="opis1">Заарештували звичайного перехожого. Дізнайся як це сталося та чому.</string>
    <string name="opis2">Хто намагався отруїти багатого бізнесмена? Розкрий злочин.</string>
    <string name="opis3">Чи насправді листоноша вбив літнього чоловіка? Дізнайся правду.</string>
    <string name="opis4">Кого вкусив перевертень? Знайди жертву.</string>
    <string name="opis5">Чи насправді дівчина винна в кражі даних. Розпочни власне слідство.</string>

    <string name="rezult">У вас погано розвинуте логічне мислення. Той результат, який отримали ви, можна отримати простим тиканням навмання.</string>
    <string name="rezult2">Ви здатні швидко оцінювати ситуацію, але не завжди бачите її в усій повноті. Чим менше влучень, тим сильніше у вас схильність до поспіху або невміння відкидати непотрібні подробиці. Дайте собі більше часу на вирішення важливих для вас проблем.</string>
    <string name="rezult3">Такими темпами у вас є всі шанси стати другим Шерлоком - зробите собі ім\'я як детектив і будете розкривати найскладніші й заплутані справи. Але перед цим варто потренуватися, на деяких питаннях нам вдалося вас заплутати. Можна, наприклад, подивитися "Твін Пікс" ну або почитати Дарину Донцову.</string>
    <string name="error_email">Введіть ваш логін</string>
    <string name="error_pass">Введіть пароль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>